# NovaLuis

./: .dockerignore  .gitignore  .gitmodules  .replit  AGENTS.md  AI_NOTES.md  CHANGELOG.md  DIRECTIVE.md  Dockerfile  Dockerfile.simple  EXHAUSTIVE_RECURSIVE_WORK_TREE.md  GOVERNANCE.json  GOVERNANCE.md  HEARTBEAT.md  IDENTITY.md  LIVE_COMPOSIO_PROBE.txt  README.md  SYSTEM_MAP.md  TOOLS.md  USER.md  fly.toml  index.html  openclaw.example.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  render.yaml  replit.md  server.js  voice.html
.agents/: agent_assets_metadata.toml
.do/: app.yaml
integrations/autonomous_agent_hardened/: Dockerfile  HARDENING_REPORT.md  README.md  docker-compose.yml  pyproject.toml
integrations/autonomous_agent_hardened/autonomous_agent/: __init__.py  cli.py  config.py  exceptions.py  logging_setup.py  metrics.py
integrations/autonomous_agent_hardened/autonomous_agent/analyzer/: backends.py  llm_analyzer.py  rule_analyzer.py
integrations/autonomous_agent_hardened/autonomous_agent/answer_analysis/: __init__.py  engine.py
integrations/autonomous_agent_hardened/autonomous_agent/codeops/: __init__.py  governor.py  models.py  schema_loader.py  state_machine.py
integrations/autonomous_agent_hardened/autonomous_agent/core/: __init__.py  agent.py  agentic_runtime.py  agentic_types.py  state.py  types.py
integrations/autonomous_agent_hardened/autonomous_agent/governance/: bos_trinity.py
integrations/autonomous_agent_hardened/autonomous_agent/memory/: store.py
integrations/autonomous_agent_hardened/config/: default.yaml
(+2299 files in other folders)
